k8s/CONF/deployer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: conf
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: deployer
  name: deployer
spec:
  selector:
    matchLabels:
      io.kompose.service: deployer
  replicas: 1
  strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 50%
            maxUnavailable: 50%
  minReadySeconds: 10
  revisionHistoryLimit: 3
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: deployer
    spec:
      containers:
      - env:
        - name: RABBITMQ_HOST
          value: rabbit
        - name: SURE_TOSCA_BASE_PATH
          value: http://sure-tosca:8081/tosca-sure/1.0.0
        - name: SEMAPHORE_BASE_PATH
          value: http://semaphore:3000/api
        - name: CREDENTIAL_SECRET
          value: sn7M5MwhUDi7GviSU-0YtNDpgXlKvA4NYHGKBvzToas=
        image: qcdis/sdia-deployer:1.0.3
        name: deployer
        imagePullPolicy: Always
        resources: {}
      restartPolicy: Always
status: {}
