k8s/CONF/jupyter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: jupyter
  name: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jupyter  
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: jupyter
    spec:
      containers:
        image: jupyter/base-notebook    
        name: jupyter
        ports:
        - containerPort: 8888
        resources: {}
      restartPolicy: Always
status: {}
