k8s/CONF/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  selector:
    matchLabels:
      io.kompose.service: mongo
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mongo
    spec:
      containers:
      - image: mongo:4
        name: mongo
        resources: {}
      restartPolicy: Always
status: {}
