k8s/CONF/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: conf
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-express
  name: mongo-express
spec:
  selector:
    matchLabels:
      io.kompose.service: mongo-express
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mongo-express
    spec:
      containers:
      - env:
        #- name: ME_CONFIG_BASICAUTH_PASSWORD
          #value: ZjEwMjhiNmRiNDQ0N2UzMTU5OWFhNjkz
        #- name: ME_CONFIG_BASICAUTH_USERNAME
          #value: NGU4NWIwMDM0Njg1ZGRhYjhkMzgyNGQ3
        - name: ME_CONFIG_MONGODB_PORT
          value: "27017"
        - name: ME_CONFIG_MONGODB_SERVER
          value: mongo
        - name: ME_CONFIG_SITE_BASEURL
          value: /mongo-express
        - name: VCAP_APP_PORT
          value: "8082"
        image: mongo-express
        name: mongo-express
        ports:
        - containerPort: 8082
        resources: {}
      restartPolicy: Always
status: {}
