k8s/CONF/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: conf
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
        volumeMounts:        
        - mountPath: /etc/nginx/
          name: nginx-conf
      restartPolicy: Always
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
            - key: cert.pem
              path: cert.pem      
            - key: privkey.pem
              path: privkey.pem       
status: {}
