k8s/CONF/planner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: planner
  name: planner
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: planner    
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: planner
    spec:
      containers:
      - env:
        - name: RABBITMQ_HOST
          value: rabbit
        image: alogo53/planner:3.0.0
        name: planner
        resources: {}
      restartPolicy: Always
status: {}
