k8s/CONF/provisioner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: provisioner
  name: provisioner
spec:
  selector:
    matchLabels:
      io.kompose.service: provisioner
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: provisioner
    spec:
      containers:
      - env:
        - name: RABBITMQ_HOST
          value: rabbit
        - name: SURE_TOSCA_BASE_PATH
          value: http://sure-tosca:8081/tosca-sure/1.0.0
        image: qcdis/provisioner:3.0.0
        name: provisioner
        imagePullPolicy: Always
        resources: {}
      restartPolicy: Always
status: {}
