k8s/CONF/sure-tosca-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: sure-tosca
  name: sure-tosca
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: sure-tosca
    spec:
      containers:
      - image: alogo53/sure-tosca:3.0.0
        name: sure-tosca
        ports:
        - containerPort: 8081
        resources: {}
      restartPolicy: Always
status: {}
