k8s/CONF/jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: jupyter
  name: jupyter
spec:
  type: NodePort
  ports:
    - port: 8888
      nodePort: 30003
  selector:
    io.kompose.service: jupyter
status:
  loadBalancer: {}
