k8s/CONF/manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: conf
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: manager
  name: manager
spec:
  type: NodePort  
  ports:
  - port: 8080
    nodePort: 30000
    protocol: TCP
    name: http
  #ports:
  #- name: "8080"
    #port: 8080
    #targetPort: 8080
  selector:
    io.kompose.service: manager
status:
  loadBalancer: {}
