k8s/CONF/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
 namespace: conf
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30000
    - port: 443
      nodePort: 30001      
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
