k8s/CONF/rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit
  name: rabbit
spec:
  ports:
  - name: "5671"
    port: 5671
    targetPort: 5671
  - name: "5672"
    port: 5672
    targetPort: 5672
  - name: "15672"
    port: 15672
    targetPort: 15672
  - name: "4369"
    port: 4369
    targetPort: 4369
  - name: "15671"
    port: 15671
    targetPort: 15671
  selector:
    io.kompose.service: rabbit
status:
  loadBalancer: {}
