k8s/CONF/semaphore-service.yaml
apiVersion: v1
kind: Service
metadata:
  #namespace: conf
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: semaphore
  name: semaphore
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
    
  selector:
    io.kompose.service: semaphore
status:
  loadBalancer: {}
