k8s/CONF/sure-tosca-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: sure-tosca
  name: sure-tosca
spec:
  ports:
  - name: "30001"
    port: 30001
    targetPort: 8081
  selector:
    io.kompose.service: sure-tosca
status:
  loadBalancer: {}
